# searproxy

./: Cargo.toml  README.md  build.rs  deny.toml  licenses.html  shell.nix
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cargo-deny.yml  ci.yml  gh-pages.yml  licensing.yml  pr-label.yml
docs/: licenses.html
licensing/: about.hbs  about.toml
packaging/docker/: Dockerfile  copy-binary.sh
public/: licenses.html
src/: main.rs
src/assets/: header.css  main.css  mod.rs
src/lib/: client.rs  macros.rs  mod.rs  rewrite_css.rs  rewrite_html.rs  rewrite_url.rs  shared.rs
src/model/: app_state.rs  cli.rs  config.rs  index_http_query.rs  ip_range.rs  mod.rs
src/server/: mod.rs
src/server/lib/: content_security_policy.rs  error_response.rs  fetch_url.rs  mod.rs  request_language.rs  root_span.rs
src/server/routes/: index.rs  mod.rs  route_index.rs
src/templates/: base.html  base.rs  error.html  error.rs  footer.html  header.html  header.rs  index.html  index.rs  mod.rs  redirect.rs
src/utilities/: client.rs  mod.rs  rewrite_css.rs  rewrite_html.rs  rewrite_url.rs  shared.rs
