[package]
name = "searproxy"
version = "0.4.16"
edition = "2021"
license = "AGPL-3.0"
publish = false

[profile.release]
codegen-units = 1
lto = true

[dependencies]
base64 = "=0.22.1"
bytes = "=1.7.2"
clap = { version = "=4.5.19", features = ["derive", "env"] }
fern = "=0.6.2"
futures-util = "=0.3.30"
hex = "=0.4.3"
hmac = "=0.12.1"
htmlentity = "=1.3.2"
log = "=0.4.22"
lol_html = "=2.0.0"
markup = { git = "https://github.com/utkarshkukreti/markup.rs", rev = "c1dc693e0d3e312d52160c312961bf47f1cffbf7" }
mime = "=0.3.17"
once_cell = "=1.20.1"
regex = "=1.11.0"
serde = { version = "=1.0.210", features = ["derive"] }
serde_qs = "=0.13.0"
thiserror = "=1.0.65"
url = "=2.5.2"

[dependencies.actix-web]
version = "=4.9.0"
default-features = false
features = ["compress-brotli", "compress-gzip", "compress-zstd", "macros"]

[dependencies.reqwest]
version = "=0.12.8"
default-features = false
features = ["brotli", "socks", "gzip", "deflate", "stream", "rustls-tls", "trust-dns"]

[target.'cfg(not(any(target_arch = "arm", target_arch = "armv7", target_family = "windows")))'.dependencies.sha2]
version = "=0.10.8"
default-features = false
features = ["asm", "std"]

[target.'cfg(any(target_arch = "arm", target_arch = "armv7", target_family = "windows"))'.dependencies.sha2]
version = "=0.10.8"
default-features = false
features = ["std"]

[build-dependencies]
base64 = "=0.22.1"
lightningcss = "=1.0.0-alpha.59"

[build-dependencies.sha2]
version = "=0.10.8"
default-features = false
features = ["std"]
