[package]
name = "searproxy"
version = "0.4.23"
edition = "2024"
license = "AGPL-3.0"
publish = false

[profile.release]
codegen-units = 1
lto = true

[dependencies]
base64 = "=0.22.1"
bytes = "=1.10.1"
clap = { version = "=4.5.32", features = ["derive", "env"] }
fern = "=0.7.1"
futures-util = "=0.3.31"
hex = "=0.4.3"
hmac = "=0.12.1"
htmlentity = "=1.3.2"
log = "=0.4.27"
lol_html = "=2.2.0"
markup = { git = "https://github.com/utkarshkukreti/markup.rs", rev = "c1dc693e0d3e312d52160c312961bf47f1cffbf7" }
mime = "=0.3.17"
once_cell = "=1.21.2"
regex = "=1.11.1"
serde = { version = "=1.0.219", features = ["derive"] }
serde_qs = "=0.14.0"
thiserror = "=2.0.12"
url = "=2.5.4"

[dependencies.actix-web]
version = "=4.10.2"
default-features = false
features = ["compress-brotli", "compress-gzip", "compress-zstd", "macros"]

[dependencies.reqwest]
version = "=0.12.14"
default-features = false
features = ["brotli", "socks", "gzip", "deflate", "stream", "rustls-tls", "trust-dns"]

[target.'cfg(not(any(target_arch = "arm", target_arch = "armv7", target_family = "windows")))'.dependencies.sha2]
version = "=0.10.8"
default-features = false
features = ["asm", "std"]

[target.'cfg(any(target_arch = "arm", target_arch = "armv7", target_family = "windows"))'.dependencies.sha2]
version = "=0.10.8"
default-features = false
features = ["std"]

[build-dependencies]
base64 = "=0.22.1"
lightningcss = "=1.0.0-alpha.65"

[build-dependencies.sha2]
version = "=0.10.8"
default-features = false
features = ["std"]
